[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "toio_free_fleet_client"
version = "0.0.1"
description = "free_fleet client for toio Core Cubes (single-process, multi-cube via BLE)"
readme = "../README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
  "toio-py>=1.0",
  "eclipse-zenoh>=1.0",
  "pyyaml>=6.0",
]

[project.scripts]
toio-free-fleet-client = "toio_free_fleet_client.main:main"

[tool.setuptools.packages.find]
include = ["toio_free_fleet_client*"]
