<?xml version="1.0"?>
<?xml-model
    href="http://download.ros.org/schema/package_format3.xsd"
    schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>toio_free_fleet_rmf</name>
  <version>0.0.1</version>
  <description>RMF integration assets (maps, fleet config, launch) for toio Core Cube fleets.</description>

  <maintainer email="remix.re.yh@gmail.com">remix.re.yh</maintainer>
  <license>Apache-2.0</license>

  <depend>rmf_fleet_adapter_python</depend>
  <depend>free_fleet_adapter</depend>
  <depend>rmf_building_map_tools</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
